feat(index.html, sw.js): pwa ios adapter viewport

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="initial-scale=1, viewport-fit=cover, width=device-width">
+    <meta name="viewport" content="initial-scale=1, viewport-fit=cover, width=device-width, height=device-height">
 
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
